--- a/css/functions/color.css
+++ b/css/functions/color.css
@@ -1,5 +1,7 @@
 .hulk img {
   transition: all .8s ease;
-  background: linear-gradient(#00004d, #4d0000); }
+  background-color: pink;
+  background: linear-gradient(#b3b3ff, #ffb3b3); }
   .hulk img:hover {
-    background: linear-gradient(rgba(0, 0, 77, 0.8), rgba(77, 0, 0, 0.5)); }
+    background: linear-gradient(rgba(179, 179, 255, 0.8), rgba(255, 179, 179, 0.5));
+    background-color: steelblue; }
